--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Recipes curated by Emily</title>
-    <link rel="icon" href="img/el.png">
+    <link rel="icon" href="img/logo.png">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="preloader">
         <i class="circle-preloader"></i>
-        <img src="img/el.png" alt="">
+        <img src="img/logo.png" alt="">
     </div>
         <!-- Navbar Area -->
         <div class="delicious-main-menu">
@@ -24,7 +24,7 @@
                     <nav class="classy-navbar justify-content-between" id="deliciousNav">
 
                         <!-- Logo -->
-                        <a class="nav-brand" href="/"><img src="img/el.png" alt=""></a>
+                        <a class="nav-brand" href="/"><img src="img/logo.png" alt=""></a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
