--- a/index.html
+++ b/index.html
@@ -314,11 +314,10 @@
         </div>
     </section>
 
-    <section class="cta-area bg-img bg-overlay" style="background-image: url(img/bg-img/bg4.jpg);">
+    <!-- <section class="cta-area bg-img bg-overlay" style="background-image: url(img/bg-img/bg4.jpg);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
-                    <!-- Cta Content -->
                     <div class="cta-content text-center">
                         <h2>Gluten Free Receipies</h2>
                         <p>Fusce nec ante vitae lacus aliquet vulputate. Donec scelerisque accumsan molestie. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras sed accumsan neque. Ut vulputate, lectus vel aliquam congue, risus leo elementum nibh</p>
@@ -556,7 +555,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- jQuery-2.2.4 js -->
