--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <nav class="classy-navbar justify-content-between" id="deliciousNav">
 
                         <!-- Logo -->
-                        <a class="nav-brand" href="/"><img src="img/logo.png" alt=""></a>
+                        <a class="nav-brand" href="/"><img src="img/icon.png" style="width: 30%; height: auto;" alt="logo"></a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
