--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@
                             <a href="receipe-post.html">
                                 <h5>Homemade Burger</h5>
                             </a>
-                            <div class="ratings">
+                            <!-- <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star-o" aria-hidden="true"></i>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -262,13 +262,13 @@
                             <a href="receipe-post.html">
                                 <h5>Calabasa soup</h5>
                             </a>
-                            <div class="ratings">
+                            <!-- <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star-o" aria-hidden="true"></i>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -281,13 +281,13 @@
                             <a href="receipe-post.html">
                                 <h5>Homemade Breakfast</h5>
                             </a>
-                            <div class="ratings">
+                            <!-- <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star-o" aria-hidden="true"></i>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -300,13 +300,13 @@
                             <a href="receipe-post.html">
                                 <h5>Healthy Fruit Desert</h5>
                             </a>
-                            <div class="ratings">
+                            <!-- <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star-o" aria-hidden="true"></i>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
