--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         <img src="img/bg-img/r1.jpg" alt="">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Sushi Easy Receipy</h5>
+                                <h5>Cinnamon Rolls</h5>
                             </a>
                             <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -229,7 +229,7 @@
                         <img src="img/bg-img/r2.jpg" alt="">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Homemade Burger</h5>
+                                <h5>Biscuits</h5>
                             </a>
                             <!-- <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -248,7 +248,7 @@
                         <img src="img/bg-img/r3.jpg" alt="">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Vegan Smoothie</h5>
+                                <h5>Monkey Bread Muffins</h5>
                             </a>
                         </div>
                     </div>
@@ -260,7 +260,7 @@
                         <img src="img/bg-img/r4.jpg" alt="">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Calabasa soup</h5>
+                                <h5>Pumpkin Loaf</h5>
                             </a>
                             <!-- <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -279,7 +279,7 @@
                         <img src="img/bg-img/r5.jpg" alt="">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Homemade Breakfast</h5>
+                                <h5>Chocolate Chip Cookie Cake</h5>
                             </a>
                             <!-- <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -298,7 +298,7 @@
                         <img src="img/bg-img/r6.jpg" alt="">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Healthy Fruit Desert</h5>
+                                <h5>Brownies</h5>
                             </a>
                             <!-- <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
