--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@
                             <a href="receipe-post.html">
                                 <h5>Cinnamon Rolls</h5>
                             </a>
-                            <div class="ratings">
+                            <!-- <div class="ratings">
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star-o" aria-hidden="true"></i>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
