--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/r3.jpg" alt="">
+                        <img src="img/index-food/monkeybreadmuffins.jpg" alt="">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Monkey Bread Muffins</h5>
