--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         <img src="img/index-food/monkeybreadmuffins.jpg" alt="">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
-                                <h5>Monkey Bread Muffins</h5>
+                                <h5>Monkey Bread</h5>
                             </a>
                         </div>
                     </div>
