--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/r5.jpg" alt="">
+                        <img src="img/index-food/chocolatechipcookiecake.jpg" alt="">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Chocolate Chip Cookie Cake</h5>
