--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/r2.jpg" alt="">
+                        <img src="img/index-food/biscuits.jpg" style="width: 800px; height: 725px;" alt="">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Biscuits</h5>
