--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <!-- Single Best Receipe Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-best-receipe-area mb-30">
-                        <img src="img/bg-img/r4.jpg" alt="">
+                        <img src="img/index-food/pumpkinloaf.jpg" alt="">
                         <div class="receipe-content">
                             <a href="receipe-post.html">
                                 <h5>Pumpkin Loaf</h5>
