--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <header class="tstbite-header bg-white">
       <nav class="navbar navbar-expand-lg has-header-inner px-0">
-        <a class="navbar-brand" href="https://nyctreats.co">
+        <a class="navbar-brand" href="https://emuhly.com">
           <img src="assets/images/brands/nyctreats.png" style="max-width: 161px;" alt="NYC Treats">
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
