--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Recipes">
-  <meta name="author" content="NYC Treats">
+  <meta name="author" content="Emily">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>NYC Treats | Recipes</title>
-  <link rel="icon" href="assets/images/logonyctreats.png" type="image/png" sizes="16x16"/>
+  <title>Recipes by Emily</title>
+  <link rel="icon" href="assets/images/logo.png" type="image/png" sizes="16x16"/>
 
   <link href="assets/css/tastebite-styles.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
-
-
 <section class="tstbite-section p-0">
   <div class="container">
-
     <header class="tstbite-header bg-white">
       <nav class="navbar navbar-expand-lg has-header-inner px-0">
         <a class="navbar-brand" href="https://emuhly.com">
-          <img src="assets/images/brands/nyctreats.png" style="max-width: 161px;" alt="NYC Treats">
+          <img src="assets/images/icon.png" style="max-width: 161px;" alt="Emuhly">
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
           <a href="javascript:void(0);" class="search-link">
