--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <path d="M24.39,26.276l-4.9-4.9a12.012,12.012,0,1,1,1.885-1.885l4.9,4.9a1.334,1.334,0,0,1-1.886,1.886ZM2.666,12a9.329,9.329,0,0,0,15.827,6.7,1.338,1.338,0,0,1,.206-.206A9.332,9.332,0,1,0,2.666,12Z"/>
             </svg>
           </a>
-          <a href="#0" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/avatars/logo.jpg" alt="Avatar"></a>
+          <a href="#0" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/icon.png" alt="Avatar"></a>
         </div>
         <button class="navbar-toggler pe-0 ms-2 ms-md-3" type="button" data-bs-toggle="collapse" data-bs-target="#menu-4" aria-controls="menu-4" aria-expanded="false" aria-label="Toggle navigation">
           <svg data-name="Icon/Hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
