--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="tstbite-header bg-white">
       <nav class="navbar navbar-expand-lg has-header-inner px-0">
         <a class="navbar-brand" href="https://emuhly.com">
-          <img src="assets/images/emuhly.png" style="max-width: 161px;" alt="Emuhly">
+          <img src="assets/images/emuhlylogo.png" style="max-width: 161px;" alt="Emuhly">
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
           <!-- <a href="javascript:void(0);" class="search-link">
