--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -183,7 +183,7 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">99% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Cinnamon Rolls (EASY!)</h5>
+          <h5 class="py-3 mb-0 h2">Cinnamon Rolls</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
