--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
         <div class="col-md-6">
           <div class="tastebite-footer-contnet pe-0 pe-lg-5 me-0 me-md-5">
             <a href="index.html">
-              <img src="assets/images/brands/nyctreats.png" alt="Tastebite">
+              <img src="assets/images/emuhly.png" style="max-width: 125px;" alt="Emuhly">
             </a>
             <p class="mt-3 text-gray-300 pe-0 pe-lg-5 me-0 me-lg-4">"On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment</p>
           </div>
