--- a/index.html
+++ b/index.html
@@ -737,10 +737,7 @@
             </span>
           </h6>
           <ul>
-            <li><a href="#0">Facebook</a></li>
-            <li><a href="#0">Twitter</a></li>
-            <li><a href="#0">Instagram</a></li>
-            <li><a href="#0">Youtube</a></li>
+            <li><a href="https://www.instagram.com/nyctreats/">Instagram</a></li>
           </ul>
         </div>
       </div>
