--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
         <div class="col-md-6">
           <div class="tastebite-footer-contnet pe-0 pe-lg-5 me-0 me-md-5">
             <a href="index.html">
-              <img src="assets/images/emuhly.png" style="max-width: 125px;" alt="Emuhly">
+              <img src="assets/images/emuhlytransparent.png" style="max-width: 125px;" alt="Emuhly">
             </a>
           </div>
         </div>
