--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-2">
+        <!-- <div class="col-md-2">
           <h6 class="caption font-weight-medium mb-2 inter-font">
             <span>Tastebite</span>
             <span class="d-inline-block d-md-none float-end">
@@ -725,7 +725,7 @@
             <li><a href="#0">Cookies</a></li>
             <li><a href="#0">Copyright</a></li>
           </ul>
-        </div>
+        </div> -->
         <div class="col-md-2">
           <h6 class="caption font-weight-medium mb-2 inter-font">
             <span>Follow</span>
