--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     </section>
     <!-- Tstbite Components, My 4, My Md 5 -->
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Sweet Tooth</h5>
+      <h5 class="py-3 mb-0">Recipes</h5>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
@@ -293,8 +293,7 @@
         </div>
       </div>
     </section>
-    <!-- Tstbite Components, My 4, My Md 5 -->
-    <section class="tstbite-components my-4 my-md-5">
+    <!-- <section class="tstbite-components my-4 my-md-5">
       <h5 class="py-3 mb-0">Healthier Treats</h5>
       <div class="row">
         <div class="col-md-4">
@@ -328,8 +327,7 @@
           </figure>
         </div>
       </div>
-    </section>
-    <!-- Tstbite Components, My 4, My Md 5 -->
+    </section> -->
   </div>
 
   <!--<section class="tstbite-components bg-primary-light my-5 py-5">
