--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -1,92 +1,30 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
 <head>
-<meta charset="UTF-8">
-<meta name="description" content="Cinnamon Rolls Recipe">
-<meta name="author" content="NYC Treats">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>Cinnamon Rolls | NYC Treats</title>
-<link href="assets/images/logonyctreats.png" rel="shortcut icon" type="image/x-icon">
-<!-- Tastebite External CSS -->
-<link href="assets/css/swiper-bundle.min.css" rel="stylesheet" type="text/css" media="all">
-<link href="assets/css/tastebite-styles.css" rel="stylesheet" type="text/css" media="all">
+  <meta charset="UTF-8">
+  <meta name="description" content="Recipes">
+  <meta name="author" content="Emily">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title>Recipes by Emily</title>
+  <link rel="icon" href="assets/images/logo.png" type="image/png" sizes="16x16"/>
+  <link href="assets/css/tastebite-styles.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
-
-<!-- Tstbite Section, P 0 -->
 <section class="tstbite-section p-0">
   <div class="container">
-    <!-- Tstbite Header, Bg White -->
     <header class="tstbite-header bg-white">
       <nav class="navbar navbar-expand-lg has-header-inner px-0">
-        <a class="navbar-brand" href="https://nyctreats.co">
-          <img src="assets/images/brands/nyctreats.png" style="max-width: 161px;" alt="NYC Treats">
+        <a class="navbar-brand" href="https://emuhly.com">
+          <img src="assets/images/emuhly.png" style="max-width: 100px;" alt="Emuhly">
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
-          <a href="javascript:void(0);" class="search-link">
-            <svg xmlns="http://www.w3.org/2000/svg" width="26.667" height="26.667" viewBox="0 0 26.667 26.667">
-              <path d="M24.39,26.276l-4.9-4.9a12.012,12.012,0,1,1,1.885-1.885l4.9,4.9a1.334,1.334,0,0,1-1.886,1.886ZM2.666,12a9.329,9.329,0,0,0,15.827,6.7,1.338,1.338,0,0,1,.206-.206A9.332,9.332,0,1,0,2.666,12Z"/>
-            </svg>
-          </a>
-          <a href="#0" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/avatars/logo.jpg" alt="Avatar"></a>
+          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/icon.png" alt="Avatar"></a>
         </div>
         <button class="navbar-toggler pe-0 ms-2 ms-md-3" type="button" data-bs-toggle="collapse" data-bs-target="#menu-4" aria-controls="menu-4" aria-expanded="false" aria-label="Toggle navigation">
           <svg data-name="Icon/Hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path data-name="Icon Color" d="M1.033,14a1.2,1.2,0,0,1-.409-.069.947.947,0,0,1-.337-.207,1.2,1.2,0,0,1-.216-.333,1.046,1.046,0,0,1-.072-.4A1.072,1.072,0,0,1,.072,12.6a.892.892,0,0,1,.216-.321.947.947,0,0,1,.337-.207A1.2,1.2,0,0,1,1.033,12H22.967a1.206,1.206,0,0,1,.409.069.935.935,0,0,1,.336.207.9.9,0,0,1,.217.321,1.072,1.072,0,0,1,.072.391,1.046,1.046,0,0,1-.072.4,1.206,1.206,0,0,1-.217.333.935.935,0,0,1-.336.207,1.206,1.206,0,0,1-.409.069Zm0-6a1.2,1.2,0,0,1-.409-.069.934.934,0,0,1-.337-.207,1.189,1.189,0,0,1-.216-.333A1.046,1.046,0,0,1,0,6.989,1.068,1.068,0,0,1,.072,6.6a.9.9,0,0,1,.216-.322.947.947,0,0,1,.337-.207A1.2,1.2,0,0,1,1.033,6H22.967a1.206,1.206,0,0,1,.409.068.935.935,0,0,1,.336.207.9.9,0,0,1,.217.322A1.068,1.068,0,0,1,24,6.989a1.046,1.046,0,0,1-.072.4,1.193,1.193,0,0,1-.217.333.923.923,0,0,1-.336.207A1.206,1.206,0,0,1,22.967,8Zm0-6a1.2,1.2,0,0,1-.409-.068.947.947,0,0,1-.337-.207,1.193,1.193,0,0,1-.216-.334A1.039,1.039,0,0,1,0,.988,1.068,1.068,0,0,1,.072.6.892.892,0,0,1,.288.276.934.934,0,0,1,.625.069,1.2,1.2,0,0,1,1.033,0H22.967a1.206,1.206,0,0,1,.409.069.923.923,0,0,1,.336.207A.9.9,0,0,1,23.928.6,1.068,1.068,0,0,1,24,.988a1.039,1.039,0,0,1-.072.4,1.2,1.2,0,0,1-.217.334.935.935,0,0,1-.336.207A1.206,1.206,0,0,1,22.967,2Z" transform="translate(0 5)" fill="#000"></path>
           </svg>
         </button>
-        <!--<div class="collapse navbar-collapse" id="menu-4">
-          <ul class="navbar-nav m-auto pt-3 pt-lg-0">
-            <li class="nav-item dropdown">
-              <a class="nav-link" href="#" role="button" id="HomePage" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span>Home Page</span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="9.333" height="5.333" viewBox="0 0 9.333 5.333">
-                  <path d="M1.138.2A.667.667,0,0,0,.2,1.138l4,4a.667.667,0,0,0,.943,0l4-4A.667.667,0,1,0,8.2.2L4.667,3.724Z"/>
-                </svg>
-              </a>
-              <div class="dropdown-menu" aria-labelledby="HomePage">
-                <a class="dropdown-item" href="index.html">Home V1</a>
-                <a class="dropdown-item" href="home-v2.html">Home V2</a>
-                <a class="dropdown-item" href="home-v3.html">Home V3</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link" href="#" role="button" id="RecipePage" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span>Recipe Page</span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="9.333" height="5.333" viewBox="0 0 9.333 5.333">
-                  <path d="M1.138.2A.667.667,0,0,0,.2,1.138l4,4a.667.667,0,0,0,.943,0l4-4A.667.667,0,1,0,8.2.2L4.667,3.724Z"/>
-                </svg>
-              </a>
-              <div class="dropdown-menu" aria-labelledby="RecipePage">
-                <a class="dropdown-item" href="recipe-full-width.html">Full Width</a>
-                <a class="dropdown-item" href="recipe-sidebar.html">Sidebar</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link" href="#" role="button" id="Pages" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span>Pages</span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="9.333" height="5.333" viewBox="0 0 9.333 5.333">
-                  <path d="M1.138.2A.667.667,0,0,0,.2,1.138l4,4a.667.667,0,0,0,.943,0l4-4A.667.667,0,1,0,8.2.2L4.667,3.724Z"/>
-                </svg>
-              </a>
-              <div class="dropdown-menu" aria-labelledby="Pages">
-                <a class="dropdown-item" href="category.html">Category</a>
-                <a class="dropdown-item" href="archive.html">Archive</a>
-                <a class="dropdown-item" href="favorites.html">Favorites</a>
-                <a class="dropdown-item" href="profile.html">Profile</a>
-                <a class="dropdown-item" href="about.html">About</a>
-                <a class="dropdown-item" href="blog.html">Blog Page</a>
-                <a class="dropdown-item" href="search-result.html">Search Results</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="elements.html">Elements</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://fabrx.co/tastebite-food-recipes-website-template/" target="_blank">Buy</a>
-              </li>
-          </ul>
-        </div>-->
       </nav>
     </header>
   </div>
@@ -189,7 +127,7 @@
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
           <a href="#0" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/avatars/logo.jpg" alt="Avatar"></a>
-          <small class="ps-1">NYC Treats</small>
+          <small class="ps-1">Emily</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
