--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -154,11 +154,15 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>55 min</span>
+                <span>1 hour 40 minutes</span>
               </li>
               <li>
-                <small>Cookie Time</small>
-                <span>20-25 min</span>
+                <small>Cook Time</small>
+                <span>25 min</span>
+              </li>
+              <li>
+                <small>Total Time</small>
+                <span>2 hours 5 minutes</span>
               </li>
               <li>
                 <small>Servings</small>
