--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -189,7 +189,7 @@
             <div class="mt-4 mt-md-5">
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
-                <strong>For the Dough</strong>
+                <strong>Dough</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
                   <label class="form-check-label" for="crackers">1 package Pillsbury Hot Roll Mix</label>
@@ -212,7 +212,7 @@
                 </div>
               </div>
               <div class="checklist pb-4">
-                <strong>For the Cinnamon Filling</strong>
+                <strong>Filling</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
                   <label class="form-check-label" for="marshmallows">1 cup brown sugar, firmly packed </label>
@@ -235,7 +235,7 @@
                 </div>
               </div>
               <div class="checklist pb-6">
-                <strong>For the Cream Cheese Frosting</strong>
+                <strong>Cream Cheese Frosting</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
                   <label class="form-check-label" for="marshmallows">2 tablespoons butter, softened</label>
