--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -250,7 +250,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="thickened" name="thickened" class="form-check-input">
-                  <label class="form-check-label" for="thickened">1 tablespoon half-and-half</label>
+                  <label class="form-check-label" for="thickened">1 tablespoon half-and-half (sub 1/2 tablespoon whole milk and 1/2 tablespoon heavy cream if necessary)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="tbsppowdered" name="tbsppowdered" class="form-check-input">
