--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -192,23 +192,31 @@
                 <strong>Dough</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 package Pillsbury Hot Roll Mix</label>
+                  <label class="form-check-label" for="crackers">2 and 3/4 cups (344g) flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3 tablespoons sugar</label>
+                  <label class="form-check-label" for="unsalted">1/4 cup (50g) granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 cup hot water (120 to 130 F)</label>
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 tablespoons butter, softened</label>
+                  <label class="form-check-label" for="unsalted">3/4 cup (180ml) whole milk</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 egg, room temperature</label>
+                  <label class="form-check-label" for="unsalted">3 tablespoons (45g) unsalted butter</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 packet instant yeast</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 large egg (room temperature)</label>
                 </div>
               </div>
               <div class="checklist pb-4">
