--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -223,23 +223,15 @@
                 <strong>Filling</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
-                  <label class="form-check-label" for="marshmallows">1 cup brown sugar, firmly packed </label>
+                  <label class="form-check-label" for="marshmallows">1/3 cup (67g) packed light or dark brown sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="melted" name="melted" class="form-check-input">
-                  <label class="form-check-label" for="melted">1/3 cup flour</label>
+                  <label class="form-check-label" for="melted">3 tablespoons (45g) unsalted butter, extra softened</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="Philadelphia" name="Philadelphia" class="form-check-input">
-                  <label class="form-check-label" for="Philadelphia">2 tablespoons butter, softened</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="thickened" name="thickened" class="form-check-input">
-                  <label class="form-check-label" for="thickened">1 1/2 tablespoons ground cinnamon</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="tbsppowdered" name="tbsppowdered" class="form-check-input">
-                  <label class="form-check-label" for="tbsppowdered">2 tablespoons half-and-half, divided (optional)</label>
+                  <label class="form-check-label" for="Philadelphia">1 tablespoon ground cinnamon</label>
                 </div>
               </div>
               <div class="checklist pb-6">
