--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -258,51 +258,6 @@
                 </div>
               </div>
             </div>
-            <!--<div class="row mt-4 g-0">
-              <div class="col-lg-8">
-                <div class="rounded-12 bg-lightest-gray p-4">
-                  <h6>Nutrition Facts</h6>
-                  <ul class="Nutrition-list list-unstyled">
-                    <li>
-                      <span>Calories</span>
-                      <span>219.9</span>
-                    </li>
-                    <li>
-                      <span>Total Fat</span>
-                      <span>10.7 g</span>
-                    </li>
-                    <li>
-                      <span>Saturated Fat</span>
-                      <span>2.2 g</span>
-                    </li>
-                    <li>
-                      <span>Cholesterol</span>
-                      <span>37.4 mg</span>
-                    </li>
-                    <li>
-                      <span>Sodium</span>
-                      <span>120.3 mg</span>
-                    </li>
-                    <li>
-                      <span>Potassium</span>
-                      <span>32.8 mg</span>
-                    </li>
-                    <li>
-                      <span>Total Carbohydrate</span>
-                      <span>22.3 g</span>
-                    </li>
-                    <li>
-                      <span>Sugars</span>
-                      <span>8.4 g</span>
-                    </li>
-                    <li>
-                      <span>Protein</span>
-                      <span>7.9 g</span>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>-->
           </div>
           <div class="col-md-6">
             <div class="mt-5">
@@ -311,39 +266,35 @@
                 <strong>For the Dough</strong>
                 <li>
                   <span>1</span>
-                  Coat 13 x 9-inch (or 8 x 8-inch) baking pan with non-stick cooking spray.
+                  <b>Make the dough:</b> Whisk the flour, sugar, and salt together in a large bowl. Set aside.
                 </li>
                 <li>
                   <span>2</span>
-                  Pour mixture into a 20cm (8”) tart tin. Use the back of a spoon to firmly press the mixture out across the bottom and sides of the tart tin. Chill for 30 min.
+                  Combine the milk and butter together in a heatproof bowl. Microwave or use the stove and heat until the butter has melted and the mixture is warm to the touch (about 110°F/43°C, no higher). Whisk in the yeast until it has dissolved. Pour mixture into the dry ingredients, add the egg, and stir with a sturdy rubber spatula or wooden spoon OR use a stand mixer with a paddle attachment on medium speed. Mix until a soft dough forms.
                 </li>
                 <li>
                   <span>3</span>
-                  Begin by adding the marshmallows and melted butter into a microwave safe bowl. Microwave for 30 seconds and mix to combine. Set aside.
+                  Transfer dough to a lightly floured surface. Using floured hands, knead the dough for 3 minutes. You should have a smooth ball of dough. If the dough is super soft or sticky, you can add a little more flour. Place in a lightly greased bowl (I use non-stick spray), cover loosely, and let the dough rest for about 10 minutes as you get the filling ingredients ready.
                 </li>
                 <li>
                   <span>4</span>
-                  Next, add the gelatine and water to a small mixing bowl and mix to combine. Microwave for 30 seconds.
+                  <b>Fill the rolls:</b> After 10 minutes, roll the dough out in a 14×8-inch (36×20-cm) rectangle. Spread the softened butter on top. Mix together the cinnamon and brown sugar. Sprinkle it all over the dough. Roll up the dough to make a 14-inch log. Cut into 10–12 even rolls and arrange in a lightly greased 9- or 10-inch round cake pan, pie dish, or square baking pan.
                 </li>
                 <li>
                   <span>5</span>
-                  Add the cream cheese to the marshmallow mixture and use a hand mixer or stand mixer fitted with a paddle attachment to mix until smooth.
+                  <b>Rise:</b> Cover the pan with aluminum foil, plastic wrap, or a clean kitchen towel. Allow the rolls to rise in a relatively warm environment for 60–90 minutes or until double in size. (For a tiny reduction in rise time, see my answer to Where Should Dough Rise? in my Baking with Yeast Guide.)
                 </li>
                 <li>
                   <span>6</span>
-                  Add the warm cream and melted gelatin mixture and mix until well combined.
+                  <b>Bake the rolls:</b> After the rolls have doubled in size, preheat the oven to 375°F (190°C). Bake for 24–27 minutes, or until lightly browned. If you notice the tops are getting too brown too quickly, loosely tent the pan with aluminum foil and continue baking. If you want to be precise about their doneness, their internal temperature taken with an instant read thermometer should be around 195–200°F (91–93°C) when done. Remove pan from the oven and place pan on a wire rack as you make the icing. (You can also make the icing as the rolls bake.)
                 </li>
                 <li>
                   <span>7</span>
-                  Add 1/3 of the mixture to a mixing bowl, add purple food gel and mix until well combined. Colour 1/3 of the mixture blue. Split the remaining mixture into two mixing bowls, colour one pink and leave the other white.
+                  <b>Make the icing:</b> In a medium bowl using a handheld or stand mixer fitted with a paddle or whisk attachment, beat the cream cheese on high speed until smooth and creamy. Add the butter and beat until smooth and combined, then beat in the confectioners’ sugar and vanilla until combined. Using a knife or icing spatula, spread the icing over the warm rolls and serve immediately.
                 </li>
                 <li>
                   <span>8</span>
-                  Pour half the purple cheesecake mixture into the chill tart crust. Add half the blue and then add the remaining purple and blue in the tart tin. Use a spoon to drizzle some pink cheesecake on top. Use a skewer or the end of a spoon to swirl the pink. Add some small dots of the plain cheesecake mixture to create stars and then sprinkle some more starts on top before chilling for 2 hours.
-                </li>
-                <li>
-                  <span>9</span>
-                  Slice with a knife to serve.
+                  Cover leftover frosted or unfrosted rolls tightly and store at room temperature for up to 2 days or in the refrigerator for up to 5 days.
                 </li>
               </ul>
             </div>
