--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -126,7 +126,7 @@
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <a href="#0" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/avatars/logo.jpg" alt="Avatar"></a>
+          <a class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/icon.png" alt="Avatar"></a>
           <small class="ps-1">Emily</small>
         </div>
         <div class="my-2 me-4">
