--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -151,7 +151,7 @@
               </li>
               <li>
                 <small>Servings</small>
-                <span>6-8 Cinnamon Rolls
+                <span>10 Cinnamon Rolls
                   <a href="#0" class="ms-2">
                     <svg data-name="feather-icon/edit" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
                       <rect data-name="Bounding Box" width="16" height="16" fill="rgba(255,255,255,0)"/>
