--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -112,7 +112,7 @@
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
           <a class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/icon.png" alt="Avatar"></a>
-          <small class="ps-1">Emily</small>
+          <small class="ps-1">Sally's Baking Addiction</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
