--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
       <div class="row pt-4 pb-0 pb-md-5">
         <div class="col-md-6">
           <div class="tastebite-footer-contnet pe-0 pe-lg-5 me-0 me-md-5">
-            <a href="index.html">
+            <a href="/">
               <img src="assets/images/emuhlytransparent.png" style="max-width: 125px;" alt="Emuhly">
             </a>
           </div>
