--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -151,7 +151,7 @@
               </li>
               <li>
                 <small>Servings</small>
-                <span>10 Cinnamon Rolls
+                <span>10 rolls
                   <a href="#0" class="ms-2">
                     <svg data-name="feather-icon/edit" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
                       <rect data-name="Bounding Box" width="16" height="16" fill="rgba(255,255,255,0)"/>
@@ -274,7 +274,7 @@
                 </li>
                 <li>
                   <span>7</span>
-                  <b>Make the icing:</b> In a medium bowl using a handheld or stand mixer fitted with a paddle or whisk attachment, beat the cream cheese on high speed until smooth and creamy. Add the butter and beat until smooth and combined, then beat in the confectioners’ sugar and vanilla until combined. Using a knife or icing spatula, spread the icing over the warm rolls and serve immediately.
+                  <b>Make the frosting:</b> Beat the butter and cream cheese in a medium bowl with an electric mixer until blended. Add powdered sugar, half-and-half, and vanilla extract, mixing until smooth. Spread over warm rolls.
                 </li>
                 <li>
                   <span>8</span>
