--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -277,7 +277,7 @@
                 </li>
                 <li>
                   <span>8</span>
-                  Cover leftover frosted or unfrosted rolls tightly and store at room temperature for up to 2 days or in the refrigerator for up to 5 days.
+                  Cover leftover frosted or unfrosted rolls tightly and store in the refrigerator for up to 5 days.
                 </li>
               </ul>
             </div>
