--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -149,7 +149,7 @@
                 <span>2 hours 5 minutes</span>
               </li>
               <li>
-                <small>Servings</small>
+                <small>Serving</small>
                 <span>10 rolls
                 </span>
               </li>
