--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -193,7 +193,7 @@
                 <strong>Filling</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
-                  <label class="form-check-label" for="marshmallows">1/3 cup (67g) packed light or dark brown sugar</label>
+                  <label class="form-check-label" for="marshmallows">1/3 cup (67g) packed brown sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="melted" name="melted" class="form-check-input">
