--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -251,7 +251,7 @@
                 </li>
                 <li>
                   <span>5</span>
-                  <b>Rise:</b> Cover the pan with aluminum foil, plastic wrap, or a clean kitchen towel. Allow the rolls to rise in a relatively warm environment for 60–90 minutes or until double in size. (For a tiny reduction in rise time, see my answer to Where Should Dough Rise? in my Baking with Yeast Guide.)
+                  <b>Rise:</b> Cover the pan with aluminum foil, plastic wrap, or a clean kitchen towel. Allow the rolls to rise in a relatively warm environment for 60–90 minutes or until double in size.
                 </li>
                 <li>
                   <span>6</span>
