--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="#0" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/pumpkinspicecookies.JPG" class="w-100" alt="Menu">
+              <img src="assets/images/menus/monkeybreadmuffins.jpg" class="w-100" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="#0" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Spice Cheesecake Cookies</a>
+              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
             </figcaption>
           </figure>
         </div>
