--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="#0" class="tstbite-animation rounded-6">
+            <a href="/monkeybread" class="tstbite-animation rounded-6">
               <img src="assets/images/menus/monkeybread.jpg" class="w-100" alt="Menu">
             </a>
             <figcaption class="mt-2">
