--- a/monkeybread.html
+++ b/monkeybread.html
@@ -105,12 +105,12 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Cinnamon Rolls</h5>
+          <h5 class="py-3 mb-0 h2">Monkey Bread Muffins</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Sally's Baking Addiction</small>
+          <small class="ps-1">Author: Knead Some Sweets</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
@@ -122,7 +122,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/menus/cinnamonroll.JPG" class="w-100" alt="Menu">
+          <img src="assets/images/menus/monkeybread.jpg" class="w-100" alt="Menu">
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -130,19 +130,19 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>1 hour 40 minutes</span>
+                <span>30 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>25 minutes</span>
+                <span>15 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>2 hours 5 minutes</span>
+                <span>1 hour 45 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>10 rolls
+                <span>12 muffins
                 </span>
               </li>
             </ul>
@@ -151,52 +151,45 @@
             <div class="mt-4 mt-md-5">
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
-                <strong>Dough</strong>
+                <strong>Monkey Bread</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 and 3/4 cups (344g) flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="crackers">2 cups flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/4 cup (50g) granulated sugar</label>
+                  <label class="form-check-label" for="unsalted">1 tablespoon instant yeast</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
+                  <label class="form-check-label" for="unsalted">1 tablespoon granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3/4 cup (180ml) whole milk</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3 tablespoons (45g) unsalted butter</label>
+                  <label class="form-check-label" for="unsalted">2 tablespoons avocado oil</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 packet instant yeast</label>
+                  <label class="form-check-label" for="unsalted">3/4 cup + 2 tbsp warm milk (110℉)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 large egg (room temperature)</label>
+                  <label class="form-check-label" for="unsalted">1/3 cup salted butter, melted (sub Kerrygold unsalted butter)</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">3/4 cup brown sugar, packed</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 tablespoon ground cinnamon</label>
                 </div>
               </div>
               <div class="checklist pb-4">
-                <strong>Filling</strong>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
-                  <label class="form-check-label" for="marshmallows">1/3 cup (67g) packed brown sugar</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="melted" name="melted" class="form-check-input">
-                  <label class="form-check-label" for="melted">3 tablespoons (45g) unsalted butter, extra softened</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="Philadelphia" name="Philadelphia" class="form-check-input">
-                  <label class="form-check-label" for="Philadelphia">1 tablespoon ground cinnamon</label>
-                </div>
-              </div>
-              <div class="checklist pb-6">
                 <strong>Cream Cheese Frosting</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
@@ -227,27 +220,27 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  <b>Make the dough:</b> Whisk the flour, sugar, and salt together in a large bowl. Set aside.
+                  <b>Make the dough:</b> Mix together the flour, quick-rise yeast, sugar, and salt in a mixing bowl. Put the oil together with the warm milk (110℉) in a glass measuring cup. Slowly add all the oil and milk into the flour mixture while mixing to form a loose dough. Turn onto a lightly floured counter and knead until a smooth dough forms - about 1 minute of kneading.
                 </li>
                 <li>
                   <span>2</span>
-                  Combine the milk and butter together in a heatproof bowl. Microwave or use the stove and heat until the butter has melted and the mixture is warm to the touch (about 110°F/43°C, no higher). Whisk in the yeast until it has dissolved. Pour mixture into the dry ingredients, add the egg, and stir with a sturdy rubber spatula or wooden spoon OR use a stand mixer with a paddle attachment on medium speed. Mix until a soft dough forms.
+                  Shape dough into a ball and place in a bowl that has been well greased with oil (seam side down). Cover with plastic wrap and let rise in a warm place for 1 hour.
                 </li>
                 <li>
                   <span>3</span>
-                  Transfer dough to a lightly floured surface. Using floured hands, knead the dough for 3 minutes. You should have a smooth ball of dough. If the dough is super soft or sticky, you can add a little more flour. Place in a lightly greased bowl (I use non-stick spray), cover loosely, and let the dough rest for about 10 minutes as you get the filling ingredients ready.
+                  When the dough is done rising, preheat the oven to 375℉. Grease a 12-count muffin tin with non-stick spray or use cupcake liners.
                 </li>
                 <li>
                   <span>4</span>
-                  <b>Fill the rolls:</b> After 10 minutes, roll the dough out in a 14×8-inch (36×20-cm) rectangle. Spread the softened butter on top. Mix together the cinnamon and brown sugar. Sprinkle it all over the dough. Roll up the dough to make a 14-inch log. Cut into 10–12 even rolls and arrange in a lightly greased 9- or 10-inch round cake pan, pie dish, or square baking pan.
+                  Punch down the dough to deflate all air pockets. Place the melted butter in a small bowl and mix together the brown sugar and cinnamon in another small bowl.
                 </li>
                 <li>
                   <span>5</span>
-                  <b>Rise:</b> Cover the pan with aluminum foil, plastic wrap, or a clean kitchen towel. Allow the rolls to rise in a relatively warm environment for 60–90 minutes or until double in size.
+                  Cut off small pieces of dough (each about the size of your thumb, for lack of a better size reference), dip each piece in the melted butter and then roll each in the cinnamon sugar to coat before placing in the muffin cup. Each cup of the muffin tin should have about 5 or 6 pieces or just distribute the pieces evenly between all cups. Repeat until all the dough is used up (you may need to use a bit more brown sugar and cinnamon if you run out).
                 </li>
                 <li>
                   <span>6</span>
-                  <b>Bake the rolls:</b> After the rolls have doubled in size, preheat the oven to 375°F (190°C). Bake for 24–27 minutes, or until lightly browned. If you notice the tops are getting too brown too quickly, loosely tent the pan with aluminum foil and continue baking. If you want to be precise about their doneness, their internal temperature taken with an instant read thermometer should be around 195–200°F (91–93°C) when done. Remove pan from the oven and place pan on a wire rack as you make the frosting. (You can also make the frosting as the rolls bake.)
+                  Bake the muffins immediately in the preheated oven for 15-17 minutes or until bubbly and fully cooked on the inside. Let cool in the pan for at least 10 minutes before topping with frosting if desired. Enjoy!
                 </li>
                 <li>
                   <span>7</span>
@@ -255,7 +248,7 @@
                 </li>
                 <li>
                   <span>8</span>
-                  Cover leftover frosted or unfrosted rolls tightly and store in the refrigerator for up to 5 days.
+                  Cover leftover frosted or unfrosted muffins tightly and store in the refrigerator for up to 5 days.
                 </li>
               </ul>
             </div>
