--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -130,11 +130,15 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>1 hour 40 minutes</span>
+                <span>30 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
                 <span>25 minutes</span>
+              </li>
+              <li>
+                <small>Rise Time</small>
+                <span>1 hour 10 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
