--- a/monkeybread.html
+++ b/monkeybread.html
@@ -137,6 +137,10 @@
                 <span>15 minutes</span>
               </li>
               <li>
+                <small>Rise Time</small>
+                <span>1 hour</span>
+              </li>
+              <li>
                 <small>Total Time</small>
                 <span>1 hour 45 minutes</span>
               </li>
