--- a/monkeybread.html
+++ b/monkeybread.html
@@ -122,7 +122,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/menus/monkeybread.jpg" class="w-100" alt="Menu">
+          <img src="assets/images/menus/monkeybread.jpeg" class="w-100" alt="Menu">
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
