--- a/monkeybread.html
+++ b/monkeybread.html
@@ -248,7 +248,7 @@
                 </li>
                 <li>
                   <span>7</span>
-                  <b>Make the frosting:</b> Beat the butter and cream cheese in a medium bowl with an electric mixer until blended. Add powdered sugar, half-and-half, and vanilla extract, and mix until smooth. Spread over warm rolls.
+                  <b>Make the frosting:</b> Beat the butter and cream cheese in a medium bowl with an electric mixer until blended. Add powdered sugar, half-and-half, and vanilla extract, and mix until smooth. Drizzle over warm monkey bread.
                 </li>
                 <li>
                   <span>8</span>
