--- a/monkeybread.html
+++ b/monkeybread.html
@@ -267,10 +267,10 @@
         <div class="col-lg-3 col-md-4 col-6">
           <figure class="my-3 my-md-4 tstbite-card">
             <a href="recipe-sidebar.html" class="tstbite-animation stretched-link rounded-6">
-              <img src="assets/images/menus/menu126.jpg" class="w-100" alt="Menu">
+              <img src="assets/images/menus/cinnamonrolls.png" class="w-100" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="recipe-sidebar.html" class="text-black d-block mt-1 font-weight-semibold big">Cranberry Macaroon Ice Cream Cake</a>
+              <a href="recipe-sidebar.html" class="text-black d-block mt-1 font-weight-semibold big">Cinnamon Rolls</a>
             </figcaption>
           </figure>
         </div>
